--- a/style.css
+++ b/style.css
@@ -24,14 +24,16 @@ body {
 .cell {
     width: 40px;
     height: 40px;
-    background-color: #ddd;
+    background-color: #92d6f4;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border: 1px solid #aaa;
+    border: 1px solid #b5dbde;
     font-size: 18px;
     font-weight: bold;
+    box-shadow: 2px 2px 8px #4c4567;
+    border-radius: 25px;
 }
 
 .cell.revealed {
@@ -51,6 +53,7 @@ body {
 h1 {
     color: aliceblue;
     text-shadow: 2px 2px 8px #4c4567;
+    font-size: 80px;
 }
 
 button {
@@ -68,4 +71,8 @@ button {
 
 button:hover {
     background-color: #4c4567;
+}
+
+.cell:hover {
+    background-color: #44b6e7;
 }
